--- a/index.html
+++ b/index.html
@@ -1,23 +1,41 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>Vodafone AR</title>
+    <meta charset="UTF-8" />
+    <title>Vodafone AR with MindAR</title>
     <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.4/dist/mindar-image-aframe.prod.js"></script>
+    <style>
+      body {
+        margin: 0;
+        overflow: hidden;
+      }
+    </style>
   </head>
-  <body style="margin: 0; overflow: hidden">
-    <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
-      <!-- Marker -->
-      <a-marker preset="hiro">
-        <!-- Your 3D Model -->
+  <body>
+    <!-- MindAR scene -->
+    <a-scene
+      mindar-image="imageTargetSrc: ./vodafone-target.mind;"
+      vr-mode-ui="enabled: false"
+      device-orientation-permission-ui="enabled: true"
+      renderer="colorManagement: true, physicallyCorrectLights"
+    >
+      <!-- Camera for MindAR -->
+      <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
+
+      <!-- Trackable image target -->
+      <a-entity mindar-image-target="targetIndex: 0">
         <a-entity
-          gltf-model="/vodafoneCharacters.glb"
+          gltf-model="./vodafoneCharacters.glb"
           scale="0.5 0.5 0.5"
           position="0 0 0"
+          rotation="0 180 0"
         ></a-entity>
-      </a-marker>
+      </a-entity>
 
-      <a-entity camera></a-entity>
+      <!-- Lights -->
+      <a-light type="ambient" intensity="1"></a-light>
+      <a-light type="directional" position="1 1 1" intensity="0.8"></a-light>
     </a-scene>
   </body>
 </html>
