--- a/index.html
+++ b/index.html
@@ -3,126 +3,116 @@
   <head>
     <script src="https://aframe.io/releases/1.4.2/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js@3.4.5/aframe/build/aframe-ar.js"></script>
+    <script>
+      // Component to anchor model in world space
+      AFRAME.registerComponent("world-anchor", {
+        init: function () {
+          // Store initial world position
+          this.worldPosition = new THREE.Vector3();
+          this.el.object3D.getWorldPosition(this.worldPosition);
+
+          // Lock the position in world space
+          setTimeout(() => {
+            this.el.object3D.position.copy(this.worldPosition);
+            this.el.object3D.matrixAutoUpdate = false;
+            this.el.object3D.updateMatrix();
+          }, 100);
+        },
+      });
+    </script>
     <style>
       body {
         margin: 0;
         overflow: hidden;
       }
-      #instructions {
+      #controls {
         position: absolute;
         top: 20px;
         left: 50%;
         transform: translateX(-50%);
-        background: rgba(0, 0, 0, 0.8);
+        background: rgba(0, 0, 0, 0.7);
         color: white;
-        padding: 20px 30px;
-        border-radius: 15px;
+        padding: 15px 25px;
+        border-radius: 10px;
         font-family: Arial, sans-serif;
         font-size: 14px;
         z-index: 1000;
         text-align: center;
-        max-width: 90%;
-      }
-      #instructions strong {
-        font-size: 16px;
-        color: #00d4ff;
-      }
-      #download-marker {
-        margin-top: 15px;
-        padding: 10px 20px;
-        background: #00d4ff;
-        color: black;
-        border: none;
-        border-radius: 8px;
-        font-weight: bold;
-        cursor: pointer;
-        font-size: 14px;
       }
     </style>
   </head>
   <body>
-    <div id="instructions">
-      <div><strong>📱 AR Marker Mode</strong></div>
-      <div style="margin-top: 10px">Point your camera at the Hiro marker</div>
-      <div style="margin-top: 5px; font-size: 12px">
-        (The model will appear on the marker)
-      </div>
-      <button
-        id="download-marker"
-        onclick="window.open('https://raw.githubusercontent.com/AR-js-org/AR.js/master/data/images/hiro.png', '_blank')"
-      >
-        📥 Download Hiro Marker
-      </button>
+    <div id="controls">
+      <div><strong>📱 AR Mode</strong></div>
+      <div>Model is fixed in space - move your camera to explore!</div>
     </div>
 
     <a-scene
       embedded
-      arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;"
+      arjs="sourceType: webcam; debugUIEnabled: false;"
       vr-mode-ui="enabled: false"
       renderer="logarithmicDepthBuffer: true; colorManagement: true; physicallyCorrectLights: true;"
     >
-      <!-- Marker anchor - model will appear on this marker -->
-      <a-marker
-        preset="hiro"
-        smooth="true"
-        smoothCount="10"
-        smoothTolerance="0.01"
-        smoothThreshold="5"
-      >
-        <!-- 3D Model anchored to marker -->
+      <!-- Static entity that doesn't move with camera -->
+      <a-entity id="world-root" position="0 0 0">
+        <!-- 3D Model - fixed in world space -->
         <a-entity
           id="model"
           gltf-model="./vodafoneCharacters.glb"
-          scale="1.5 1.5 1.5"
-          position="0 0 0"
-          rotation="-90 0 0"
+          scale="3 3 3"
+          position="0 -1 -4"
+          rotation="0 0 0"
         ></a-entity>
-      </a-marker>
+      </a-entity>
 
-      <!-- Enhanced lighting for AR -->
-      <a-light type="ambient" color="#ffffff" intensity="2"></a-light>
+      <!-- Enhanced lighting -->
+      <a-light type="ambient" color="#ffffff" intensity="1.5"></a-light>
       <a-light
         type="directional"
-        intensity="1.2"
+        intensity="1"
         position="1 2 1"
         color="#ffffff"
       ></a-light>
       <a-light
         type="directional"
-        intensity="0.8"
+        intensity="0.5"
         position="-1 1 -1"
         color="#ffffff"
       ></a-light>
+      <a-light
+        type="hemisphere"
+        intensity="0.8"
+        color="#ffffff"
+        groundColor="#888888"
+      ></a-light>
 
-      <!-- Camera -->
-      <a-entity camera></a-entity>
+      <!-- Camera that can move freely -->
+      <a-entity
+        camera
+        look-controls
+        wasd-controls="acceleration: 20"
+        position="0 1.6 0"
+      ></a-entity>
     </a-scene>
 
     <script>
+      // Ensure model loads with correct colors
       const model = document.querySelector("#model");
-      const instructions = document.querySelector(
-        "#instructions div:nth-child(2)"
-      );
 
       model.addEventListener("model-loaded", () => {
-        console.log("✅ Model loaded - Point camera at Hiro marker!");
-        instructions.textContent = "Model loaded! Point at marker";
-        instructions.style.color = "#00ff00";
+        console.log("Model loaded successfully - fixed in world space");
+
+        // Force the model to stay in world coordinates
+        const worldRoot = document.querySelector("#world-root");
+        worldRoot.object3D.matrixAutoUpdate = false;
+        worldRoot.object3D.updateMatrix();
       });
 
       model.addEventListener("model-error", (error) => {
-        console.error("❌ Error loading model:", error);
-        instructions.textContent = "Error loading model!";
-        instructions.style.color = "#ff0000";
+        console.error("Error loading model:", error);
+        document.querySelector("#controls div:last-child").textContent =
+          "Error loading model!";
       });
-
-      // Hide instructions after 10 seconds
-      setTimeout(() => {
-        const instructionsDiv = document.querySelector("#instructions");
-        instructionsDiv.style.transition = "opacity 1s";
-        instructionsDiv.style.opacity = "0";
-        setTimeout(() => (instructionsDiv.style.display = "none"), 1000);
-      }, 10000);
     </script>
   </body>
 </html>
